deploy: 5cbd89b9d01706fa4c471109379e50bab5316b96

--- a/index.html
+++ b/index.html
@@ -100,11 +100,19 @@
 
 
     <section>
-        <article><h1>Projet 8 : Reprenez et améliorez un projet existant</h1>
+        <article><ul>
+<li><a href="https://shields.io/"><img src="https://img.shields.io/github/languages/top/Zharakai/todo-list-app" alt="Generic badge"></a></li>
+<li><img src="https://img.shields.io/badge/jasmine-%238A4182.svg?style=for-the-badge&amp;logo=jasmine&amp;logoColor=white" alt="Jasmine"></li>
+</ul>
+<h1>Projet 8 : Reprenez et améliorez un projet existant</h1>
 <h2>Etape 1 : Corrigez les bugs</h2>
 <h2>Etape 2 : Où sont les tests ?!</h2>
 <h2>Etape 3 : Optimisez la performance</h2>
-<h2>Etape 4 : Améliorez le projet</h2></article>
+<h2>Etape 4 : Améliorez le projet</h2>
+<ul>
+<li><a href="https://github.com/Zharakai/todo-list-app/wiki">How it's works ? (Documentation non-technique)</a></li>
+<li><a href="https://zharakai.github.io/todo-list-app/index.html">JSDoc (Documentation technique)</a></li>
+</ul></article>
     </section>
 
 
