--- a/helpers.js.html
+++ b/helpers.js.html
@@ -108,12 +108,14 @@
 	 * @function $on
 	 * @description addEventListener wrapper
 	 * 
-	 * @param {*} target 
-	 * @param {*} type 
-	 * @param {*} callback 
-	 * @param {*} useCapture 
+	 * @param {HTMLElement} target 
+	 * @param {string} type 
+	 * @param {function} callback 
+	 * @param {boolean} useCapture
 	 */
 	window.$on = function (target, type, callback, useCapture) {
+		console.log(useCapture);
+		console.log(typeof useCapture);
 		target.addEventListener(type, callback, !!useCapture);
 	};
 
@@ -122,10 +124,10 @@
 	 * @description Attach a handler to event for all elements that match the selector,
 	 * now or in the future, based on a root element
 	 * 
-	 * @param {*} target 
-	 * @param {*} selector 
-	 * @param {*} type 
-	 * @param {*} handler 
+	 * @param {HTMLElement} target
+	 * @param {string} selector
+	 * @param {string} type
+	 * @param {function} handler
 	 */
 	window.$delegate = function (target, selector, type, handler) {
 		function dispatchEvent(event) {
@@ -149,10 +151,11 @@
 	 * @description Find the element's parent with the given tag name:
 	 * $parent(qs('a'), 'div');
 	 * 
-	 * @param {*} element 
+	 * @param {HTMLElement} element 
 	 * @param {string} tagName 
 	 */
 	window.$parent = function (element, tagName) {
+		console.log(element);
 		if (!element.parentNode) {
 			return;
 		}
